[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitter = "0.6.1"
hex = "0.4.3"
function_name = "0.3.0"
panic-message = "0.3.0"
lazy_static = "1.4.0"
serde_json = "1.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
log = "0.4.20"